// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserGlobalAction Snapshot matches snapshot in the avatar-only state (no user) 1`] = `
<div
  class="container"
  data-testid="user-global-action-test-id"
  id="user-global-action"
>
  <span
    class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip cds--icon-tooltip"
  >
    <div
      class="cds--tooltip-trigger__wrapper"
    >
      <button
        aria-controls="user-global-action-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="USER_GLOBAL_ACTION_BUTTON"
        aria-labelledby="tooltip-_r_2d_"
        class="userAction cds--header__action cds--btn cds--btn--lg cds--layout--size-lg cds--btn--ghost cds--btn--icon-only"
        data-testid="user-global-action-button-test-id"
        id="user-global-action-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-testid="user-icon-button-test-id"
          fill="currentColor"
          focusable="false"
          height="16"
          id="user-icon"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M5,13.2v-1.5c0-0.9,0.6-1.6,1.5-1.7h3c0.9,0.1,1.5,0.8,1.5,1.7v1.5 C9.1,14.3,6.9,14.3,5,13.2L5,13.2z M12,12l0-0.8c0-0.9-1.1-2.1-2.5-2.2h-3C5.1,9.1,4,10.3,4,11.7l0,0.5v0.3c-2.5-2.2-2.7-6-0.5-8.5 s6-2.7,8.5-0.5s2.7,6,0.5,8.5c-0.1,0.2-0.3,0.3-0.5,0.5V12z"
          />
          <path
            d="M8,3C6.6,3,5.5,4.1,5.5,5.5S6.6,8,8,8s2.5-1.1,2.5-2.5S9.4,3,8,3z M8,7C7.2,7,6.5,6.3,6.5,5.5S7.2,4,8,4s1.5,0.7,1.5,1.5 S8.8,7,8,7z"
          />
        </svg>
      </button>
    </div>
    <span
      aria-hidden="true"
      class="cds--popover"
      id="tooltip-_r_2d_"
      role="tooltip"
    >
      <span
        class="cds--popover-content cds--tooltip-content"
      >
        USER_GLOBAL_ACTION_BUTTON
      </span>
      <span
        class="cds--popover-caret"
      />
    </span>
  </span>
</div>
`;

exports[`UserGlobalAction Snapshot matches snapshot in the loading state 1`] = `
<output
  aria-label="USER_GLOBAL_ACTION_LOADING"
  class="container"
  data-testid="user-global-action-test-id"
  id="user-global-action"
>
  <div
    class="cds--skeleton__placeholder skeleton"
    data-testid="user-global-action-skeleton-test-id"
  />
</output>
`;

exports[`UserGlobalAction Snapshot matches snapshot with avatar and greeting 1`] = `
<div
  class="container"
  data-testid="user-global-action-test-id"
  id="user-global-action"
>
  <span
    class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip cds--icon-tooltip"
  >
    <div
      class="cds--tooltip-trigger__wrapper"
    >
      <button
        aria-controls="user-global-action-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="USER_GLOBAL_ACTION_BUTTON"
        aria-labelledby="tooltip-_r_29_"
        class="userAction cds--header__action cds--btn cds--btn--lg cds--layout--size-lg cds--btn--ghost cds--btn--icon-only"
        data-testid="user-global-action-button-test-id"
        id="user-global-action-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-testid="user-icon-button-test-id"
          fill="currentColor"
          focusable="false"
          height="16"
          id="user-icon"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M5,13.2v-1.5c0-0.9,0.6-1.6,1.5-1.7h3c0.9,0.1,1.5,0.8,1.5,1.7v1.5 C9.1,14.3,6.9,14.3,5,13.2L5,13.2z M12,12l0-0.8c0-0.9-1.1-2.1-2.5-2.2h-3C5.1,9.1,4,10.3,4,11.7l0,0.5v0.3c-2.5-2.2-2.7-6-0.5-8.5 s6-2.7,8.5-0.5s2.7,6,0.5,8.5c-0.1,0.2-0.3,0.3-0.5,0.5V12z"
          />
          <path
            d="M8,3C6.6,3,5.5,4.1,5.5,5.5S6.6,8,8,8s2.5-1.1,2.5-2.5S9.4,3,8,3z M8,7C7.2,7,6.5,6.3,6.5,5.5S7.2,4,8,4s1.5,0.7,1.5,1.5 S8.8,7,8,7z"
          />
        </svg>
        <span
          class="greeting"
        >
          USER_GLOBAL_ACTION_GREETING Jane
        </span>
      </button>
    </div>
    <span
      aria-hidden="true"
      class="cds--popover"
      id="tooltip-_r_29_"
      role="tooltip"
    >
      <span
        class="cds--popover-content cds--tooltip-content"
      >
        USER_GLOBAL_ACTION_BUTTON
      </span>
      <span
        class="cds--popover-caret"
      />
    </span>
  </span>
</div>
`;
